# ChangeLog for dev-java/maven-project
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Jun 2007; kiorky <kiorky@cryptelium.net>
  maven-project-2.0_pre20070529.ebuild:
  moving to JAVA_MAVEN_CLASSPATH

  02 Jun 2007; kiorky <kiorky@cryptelium.net>
  +maven-project-2.0_pre20070529.ebuild, -maven-project-2.0.ebuild, +digest,
  +files/cp.patch:
  bump to 2.0_pre20070530

  29 May 2007; kiorky <kiorky@cryptelium.net> maven-project-2.0.ebuild:
  Adding maven bootstrap flag

  19 May 2007; Alistair John Bush <ali_bush@gentoo.org>
  maven-project-2.0.ebuild:
  Adding to ~amd64.

  01 May 2007; kiorky <kiorky@cryptelium.net> +maven-project-2.0.6.ebuild,
  +metadata.xml:
  Added as a maven dependency, #177491
