@@ -1,6 +1,6 @@
 AUX cp.patch 4630 RMD160 3b2ac912745bb3256079a307da932830a577488f SHA1 684ef2ea2f386e34779aef8ba6a52b39f0a8e8ad SHA256 29630e3ca8cc56961595b7633a343786b5f98484d26e35f375d3a68e976ead94
-DIST maven-project-2.0_pre20070529.tar.bz2 109206 RMD160 55b2c2726d41fe937e8c40911a453063368c1332 SHA1 5773ec20ba3a28bd298cceafe16e218efec8a310 SHA256 9ac8ca149395e2289f4b130a1d88504e952d56adfea1ade083edab1573dd42aa
-EBUILD maven-project-2.0_pre20070529.ebuild 1145 RMD160 5e9fd702167650e667d5a3932ffb55e2b9717037 SHA1 a00a2856e2050fbff3edcde2c000b800d6b6ae57 SHA256 01ada68a621b49e500063ec01f033ee6f915d34158053c40966db6d2e10fa0ce
-MISC ChangeLog 752 RMD160 109d628bfbeb39453b07501ac8b482c058c75d6e SHA1 3904fd7cc2b05e36b93180cb61e9619df2405e51 SHA256 74517b4b6202d442426ce580fcd1481044069bd5e95525a52373e9729629208f
+DIST maven-project-2.1_pre20070611.tar.bz2 145342 RMD160 9f1aa340f4837cfb2f12f2cf9f6022ba3a9d5f07 SHA1 82b9b1bef0c633dd875096fd7ad4755873db0486 SHA256 f43d844a302e03744baffc17e391e257b48537ea050aedcfc769e71bbeab439e
+EBUILD maven-project-2.1_pre20070611.ebuild 1169 RMD160 82c4ab1fb86d9a3366eb538cd1f7dc71d13157d4 SHA1 66024ac7084f654beba60e142250feef7f16e8c9 SHA256 aa535756f99001f4a89f44aafa8d121b6a9ee7c980098c76a93e4396e0d9199b
+MISC ChangeLog 898 RMD160 26b4491c81d5c6f130ef6112177baae25e1eb184 SHA1 f92b1c4187624a4aaf22de1b5230336834046c98 SHA256 fd1046b65ab2feee5fc1844183246f5ea268d82d3c0ef964e45cf12a531585ff
 MISC digest 0 RMD160 9c1185a5c5e9fc54612808977ee8f548b2258d31 SHA1 da39a3ee5e6b4b0d3255bfef95601890afd80709 SHA256 e3b0c44298fc1c149afbf4c8996fb92427ae41e4649b934ca495991b7852b855
 MISC metadata.xml 157 RMD160 ab0b3741457dee7531f59c4da0f0e9e8399af084 SHA1 c37a6b9922aef61b5b3387655bccb6e3b16e0e26 SHA256 295d02c5805b0257938eb80314b371daac94b8d6ea85629a902de7a824adc0c9
